Show thank you page on submitting user rating

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           is appreciated to help us improve our offering!
         </p>
 
-        <form>
+        <form novalidate>
           <fieldset>
             <div class="rating">
               <input type="radio" name="radio" id="radio1" value="1" />
@@ -53,7 +53,7 @@
               <label class="rating-label" for="radio5">5</label>
             </div>
           </fieldset>
-          <button type="button">Submit</button>
+          <button type="submit" class="submit-btn">Submit</button>
         </form>
       </section>
       <section class="thank-you-container hidden">
@@ -61,7 +61,7 @@
           src="./images/illustration-thank-you.svg"
           alt="thank-you-illustration"
         />
-        <p>You selected <span></span>out of 5</p>
+        <p>You selected <span id="rate"></span> out of 5</p>
         <h2>Thank you!</h2>
         <p>
           We appreciate you taking the time to give a rating. If you ever need
@@ -74,7 +74,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/SubagaS">Subaga Sreepathy</a>.
+      >. Coded by <a href="https://github.com/SubagaS" target="_blank">Subaga Sreepathy</a>.
     </div>
     <script src="/scripts/scripts.js"></script>
   </body>
